Fixed visit number spacing and primary label

--- a/templates/Admin/Dashboard/style.css
+++ b/templates/Admin/Dashboard/style.css
@@ -56,3 +56,9 @@
 .bg-primary input, .bg-primary button>i.fa, .bg-primary i.glyphicon {
     color : black;
 }
+
+
+#dashboard tr.bg-primary span.label-primary {
+    background-color : white;
+    color : #337ab7;
+}
